corpus/cpp/template/case-14/snapshots/gcc9_12/single_sink_structured/render.ci.txt
src/main.cpp:7:22: error: [template] template instantiation failed
help: start from the first user-owned template frame and match template arguments
raw : no matching function for call to 'Pair(int, const char [2])'
| src/main.cpp:7:22
|     Pair value(1, "x");
|                      ^
while instantiating:
  - src/main.cpp:3:5 candidate: 'template<class T> Pair(T, T)-> Pair<T>'
  - src/main.cpp:7:22 deduced conflicting types for parameter 'T' ('int' and 'const char*')
  - src/main.cpp:2:8 candidate: 'template<class T> Pair(Pair<T>)-> Pair<T>'
omitted 1 internal template frames

src/main.cpp:7:22: error: [template] template instantiation failed
help: start from the first user-owned template frame and match template arguments
raw : class template argument deduction failed:
| src/main.cpp:7:22
|     Pair value(1, "x");
|                      ^
while instantiating:
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output